--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --text-color: hsl(0, 0%, 90%);
+}
+
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
@@ -19,8 +23,22 @@ body {
 }
 
 .cell {
-    border: 1px solid black;
+    border: 1px solid hsl(0, 1%, 83%);
+    font-size: larger;
+    font-weight: bolder;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#output {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    
+    gap: 10px;
 }
